@@ -1,3 +1,8 @@
+2002-08-30  Glynn Foster  <glynn.foster@sun.com>
+
+	* gnome-calc.c: Keypad are read correctly when numlock
+	is on (bug #85356, patch from twaugh@redhat.com).
+
 2002-07-08  Glynn Foster  <glynn.foster@sun.com>
 
 	* Makefile.am: Add -lX11.
